--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx nodemon index.js",
     "seed": "node db/seeds.js",
     "serve": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
